--- a/Reputation/res/drawable/edit_box.xml
+++ b/Reputation/res/drawable/edit_box.xml
@@ -2,12 +2,10 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     
     <item>
-        <shape>
+        <shape
+            android:shape="rectangle">
             <solid android:color="#DDFFFFFF" />
             <stroke android:color="#FF888888" android:width="1dp" />
-            <corners 
-                android:bottomLeftRadius="6dp" 
-                android:bottomRightRadius="6dp" />
         </shape>
     </item>
     
