--- a/Reputation/res/layout/my_content_feed_ui.xml
+++ b/Reputation/res/layout/my_content_feed_ui.xml
@@ -39,7 +39,6 @@
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/primary_button"
-        android:onClick="getStartedClicked"
         android:paddingLeft="30dp"
         android:paddingRight="30dp"
         android:text="@string/customize_setting"
@@ -54,7 +53,7 @@
         android:layout_marginRight="10dp"
         android:layout_marginTop="20dp"
         android:textSize="14sp"
-        android:onClick="onUseDefaultSettingClicked"
+        android:clickable="true"
         android:text="@string/use_default_setting"
         android:textColor="@color/light_blue" />
 
