--- a/Reputation/res/layout/navigation_ui_cell.xml
+++ b/Reputation/res/layout/navigation_ui_cell.xml
@@ -7,7 +7,6 @@
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/navigation_cell_background" 
         android:layout_marginBottom="@dimen/navigation_cell_marginBottom">
 
         <ImageView
@@ -45,13 +44,13 @@
         android:background="@color/grey" >
     </FrameLayout>
 
-    <FrameLayout
+    <!-- <FrameLayout
         android:layout_width="fill_parent"
         android:layout_height="1dp"
         android:background="@color/grey" >
-    </FrameLayout>
+    </FrameLayout> -->
 
-    <LinearLayout
+    <!-- <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
@@ -60,6 +59,6 @@
             android:layout_width="fill_parent"
             android:layout_height="1dp"
             android:background="@color/grey" />
-    </LinearLayout>
+    </LinearLayout> -->
 
 </LinearLayout>
